--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -749,7 +749,7 @@ ul#menu-main_menu_french{
             @media screen and (max-width: 1410px){
                 margin-right: 10px;
                 a {
-                    font-size: 14px !important;
+                    font-size: 12px !important;
                 }
             }
             a {
@@ -769,7 +769,10 @@ ul#menu-main_menu_french{
             transition: all 0.3s ease-in;
             margin-top: 0px !important;
             @media screen and (max-width: 1410px){
-                width: 115px;
+                width: 110px;
+                a {
+                    font-size: 11px;
+                }
             }
             a{
                 height: 100%;
@@ -880,8 +883,8 @@ ul#menu-main_menu_french{
                     a {
                         display: block;
                         text-align: center;
-                        color: $white !important;
                         text-transform: uppercase;
+                        color: $white;
                         font-family: $h-font;
                         font-size: 15px;
                         max-width: 100px;
@@ -898,10 +901,10 @@ ul#menu-main_menu_french{
                         }
                         li {
                             a {
-                                color: $footer-gray !important;
+                                color: $footer-gray;
                                 font-family: $p-font;
                                 font-size: 14px;
-                                text-transform: capitalize;
+                                text-transform: inherit;
                                 text-align: center;
                                 @media screen and (max-width: 768px) {
                                     text-align: center;
@@ -912,6 +915,13 @@ ul#menu-main_menu_french{
                             }
                         }
                     }
+                }
+            }
+        }
+        ul {
+            li.current_page_item{ 
+                a{
+                    color: #fff !important;
                 }
             }
         }
@@ -939,7 +949,7 @@ ul#menu-main_menu_french{
                 margin-top: 30px;
             }
             .social-icon-container {
-                width: 23%;
+                width: 21%;
                 display: inline-block;
                 padding: 0 5px;
                 a {
@@ -967,6 +977,9 @@ ul#menu-main_menu_french{
     .footer-text-gold {
         color: $gold !important;
         font-family: $h-font;
+    }
+    p {
+        color: $footer-gray;
     }
     @media screen and (max-width: 768px){
         img {
@@ -1896,7 +1909,7 @@ display: inline-block;
 
 .vc_images_carousel {
     .vc_carousel-indicators {
-        bottom: -10px !important;
+        bottom: -30px !important;
         @media screen and (max-width: 768px) {
             bottom: -35px !important;
         }
@@ -2873,6 +2886,9 @@ display: inline-block;
     display: none;
 }
 
+// *=============== BEGIN MONTREAL 2018 ===============* //
+
+
 // MONTREAL French Button
 
 .english-btn {
@@ -2881,32 +2897,23 @@ display: inline-block;
 
 .french-btn,
 .english-btn{
-    @extend .btn-with-link-black;
     border: none !important;
     position: absolute!important;
-    left: 240px;
+    top: -30px;
+    right: 80px;
     z-index: 400;
     list-style: none;
     a {
         font-family: $p-font !important;
-        padding: 10px 25px;
         font-size: 14px;
         text-transform: uppercase;
+        color: $black;
     }
     &:hover {
-        background: none !important;
-    }
-    @media screen and (max-width: 1265px){
-        width: 140px !important;
+        color: $blue;
     }
     @media screen and (max-width: 1140px) {
-        position: relative !important;
-        left: auto;
-        margin-left: 20px !important;
-        margin-bottom: 10px !important;
-        a {
-            text-align: center !important;
-        }
+        top: -22px;
     }
 }
 .french-btn.menu-item.menu-item-type-custom.menu-item-object-custom.no-mega-menu,
@@ -2915,3 +2922,32 @@ display: inline-block;
         display: none !important;
     }
 }
+
+// Black bar for Mobile Only
+.black-bar-mobile-only {
+    @extend .rider-hub-header-v2;
+    h1 {
+        color: #fff;
+        padding: 0 20px;
+        @media screen and (max-width: 400px) {
+            font-size: 27px !important;
+        }
+    }
+    @media screen and (max-width: 768px) {
+        display: block;
+    }
+    @media screen and (min-width: 769px) {
+        display: none;
+    }
+}
+.french-title {
+    @extend .pg-title;
+    @media screen and (max-width: 768px) {
+        display: none;
+    }
+    @media screen and (min-width: 769px) {
+        display: block;
+    }
+}
+
+// *=============== END MONTREAL 2018 ===============* //
