Updates and fixes

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -2694,7 +2694,9 @@ display: inline-block;
 
 // ===== TEAMRAISER STYLING ===== //
 #top-teams,
-#top-fundraising{
+#top-fundraising,
+#mo-top-teams,
+#mo-top-fundraising{
     margin-left: 0px;
     margin-top: 25px;
     list-style-position: inside;
